# black-oracle

./: .claudeignore  .gitignore  CLAUDE.md  README.md  Readme.md  chat.py  cold-start.sh  config.py  data  ingestion_pipeline.py  main.py  oracle.py  pyproject.toml  requirements.txt  test_chat.sh  test_inference.sh  test_retrieval.py
memory/: MEMORY.md  project_overview.md  ui_preferences.md
